# iboodrss

./: Cargo.toml  Dockerfile  README.md  crontab.txt  lighttpd.conf  script.sh
.github/workflows/: publish-image.yml
src/: main.rs
web/: index.html
