[package]
name = "iboodrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
curl = "0.4.44"
rss = "2.0.6"
scraper = "0.18.1"
serde_json = "1.0.111"

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = true
